--- a/statistics/sidewalks/sidewalks_number_revisions.html
+++ b/statistics/sidewalks/sidewalks_number_revisions.html
@@ -8,8 +8,9 @@
     <div class="topnav" id="stTopnav">
         <a href="https://kauevestena.github.io/opensidewalkmap_beta/" class="active">Home</a>
     <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/sidewalks/sidewalks_smoothness_x_surface.html">Sidewalks Charts</a>
-<a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/crossings/crossings_smoothness_x_surface.html">Crossings Charts</a>
+<a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/crossings/crossing_types.html">Crossings Charts</a>
 <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/kerbs/kerbs_x_paving_x_wheelchair.html">Kerbs Charts</a>
+<a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/other_footways/other_footways_surface.html">Other_footways Charts</a>
 
    <a href="javascript:void(0);" class="icon" onclick="responsiveTopNav()">
      <i class="fa fa-bars"></i>
@@ -23,7 +24,6 @@
   <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/sidewalks/sidewalks_tactile_paving.html">Tactile Paving P.</a>
   <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/sidewalks/sidewalks_width.html">Width Values</a>
   <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/sidewalks/sidewalks_incline.html">Incline Values</a>
-  <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/sidewalks/sidewalks_survey_year.html">Year of Survey Image</a>
   <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/sidewalks/sidewalks_yr_moth_update.html">Year and Month Of Update</a>
   <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/sidewalks/sidewalks_number_revisions.html">Number Of Revisions</a>
 </div>
@@ -40,14 +40,14 @@
     
   
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/vega@5"></script>
-  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/vega-lite@5.8.0"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/vega-lite@5.17.0"></script>
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/vega-embed@6"></script>
 </head>
 <body>
   <div id="vis"></div>
   <script>
     (function(vegaEmbed) {
-      var spec = {"config": {"view": {"continuousWidth": 300, "continuousHeight": 300}, "title": {"fontSize": 24}}, "data": {"name": "data-9fc48bf3dbf97e31643ce0c1ae581cd3"}, "mark": {"type": "bar"}, "encoding": {"tooltip": [{"field": "percent", "type": "nominal"}], "x": {"field": "n_revs type", "sort": "-x", "type": "quantitative"}, "y": {"field": "count", "type": "quantitative"}}, "height": 300, "params": [{"name": "param_9", "select": {"type": "interval", "encodings": ["x", "y"]}, "bind": "scales"}], "title": "Year and Month Of Update (Sidewalks)", "width": 650, "$schema": "https://vega.github.io/schema/vega-lite/v5.8.0.json", "datasets": {"data-9fc48bf3dbf97e31643ce0c1ae581cd3": [{"n_revs type": 1, "count": 5919, "percent": "75.44%"}, {"n_revs type": 2, "count": 566, "percent": "7.21%"}, {"n_revs type": 4, "count": 547, "percent": "6.97%"}, {"n_revs type": 3, "count": 463, "percent": "5.9%"}, {"n_revs type": 5, "count": 185, "percent": "2.36%"}, {"n_revs type": 6, "count": 76, "percent": "0.97%"}, {"n_revs type": 7, "count": 42, "percent": "0.54%"}, {"n_revs type": 8, "count": 23, "percent": "0.29%"}, {"n_revs type": 9, "count": 13, "percent": "0.17%"}, {"n_revs type": 10, "count": 5, "percent": "0.06%"}, {"n_revs type": 11, "count": 4, "percent": "0.05%"}, {"n_revs type": 17, "count": 1, "percent": "0.01%"}, {"n_revs type": 14, "count": 1, "percent": "0.01%"}, {"n_revs type": 18, "count": 1, "percent": "0.01%"}]}};
+      var spec = {"config": {"view": {"continuousWidth": 300, "continuousHeight": 300}, "title": {"fontSize": 24}}, "data": {"name": "data-85d33c40f9d58d5ea4ade9349f152ab8"}, "mark": {"type": "bar"}, "encoding": {"tooltip": [{"field": "percent", "type": "nominal"}], "x": {"field": "n_revs", "sort": "-y", "type": "quantitative"}, "y": {"field": "count", "type": "quantitative"}}, "height": 300, "params": [{"name": "param_8", "select": {"type": "interval", "encodings": ["x", "y"]}, "bind": "scales"}], "title": "Year and Month Of Update (Sidewalks)", "width": 650, "$schema": "https://vega.github.io/schema/vega-lite/v5.17.0.json", "datasets": {"data-85d33c40f9d58d5ea4ade9349f152ab8": [{"n_revs": 1, "count": 5611, "percent": "71.36%"}, {"n_revs": 2, "count": 768, "percent": "9.77%"}, {"n_revs": 4, "count": 566, "percent": "7.2%"}, {"n_revs": 3, "count": 562, "percent": "7.15%"}, {"n_revs": 5, "count": 179, "percent": "2.28%"}, {"n_revs": 6, "count": 64, "percent": "0.81%"}, {"n_revs": 7, "count": 48, "percent": "0.61%"}, {"n_revs": 8, "count": 28, "percent": "0.36%"}, {"n_revs": 9, "count": 19, "percent": "0.24%"}, {"n_revs": 11, "count": 7, "percent": "0.09%"}, {"n_revs": 10, "count": 5, "percent": "0.06%"}, {"n_revs": 13, "count": 2, "percent": "0.03%"}, {"n_revs": 67, "count": 1, "percent": "0.01%"}, {"n_revs": 12, "count": 1, "percent": "0.01%"}, {"n_revs": 20, "count": 1, "percent": "0.01%"}, {"n_revs": 27, "count": 1, "percent": "0.01%"}]}};
       var embedOpt = {"mode": "vega-lite"};
 
       function showError(el, error){
